# AgenticREPL

./: .gitignore  AGENTS.md  LICENSE  README.md  featurelist.md  pyproject.toml
.github/workflows/: homebrew.yml
Formula/: agenticrepl.rb
src/srun/: config.py  context.py  danger.py  dispatch.py  llm.py  logo.py  mcp.py  prompts.py  repair.py  repl.py  skills.py  tools.py  user_config.py
src/srun/executors/: __init__.py  python_exec.py  r_exec.py  shell_exec.py
tests/: bug_hunt.py  bug_hunt2.py  conftest.py  test_danger.py  test_data_analyst.py  test_dispatch.py  test_integration.py  test_multi_line.py  test_python_exec.py  test_repair.py  test_rounds_31_100.py  test_session_stream.py  test_shell_exec.py  test_synthetic_project.py  test_ux.py
tests/data/: test.csv  test_multi_line.sh  test_multi_line_fast.sh
tests/eval/: __init__.py  grader.py  runner.py  transcript.py
tests/eval/output/: explorer_run1_20260513_125749_raw.json  explorer_run1_20260513_125749_report.json  explorer_run1_20260513_125749_transcript.json  sales_run1_20260513_155552_raw.json  sales_run1_20260513_155552_report.json  sales_run1_20260513_155552_transcript.json  sales_run1_20260513_165610_raw.json  sales_run1_20260513_165610_report.json  sales_run1_20260513_165610_transcript.json
tests/eval/prompts/: evaluator.txt  user_agent.txt
tests/eval/usecases/: cleanup.json  explorer.json  join.json  revenue.json  sales.json
tests/synthetic_project/: README.md
tests/synthetic_project/data/: config.json  sales.csv
tests/synthetic_project/src/: app.py  utils.py
