[project]
name = "srun"
version = "0.1.0"
description = "Smart Run - AI-powered shell REPL that fixes your mistakes"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pandas>=1.3.0",
]

[project.scripts]
srun = "srun.repl:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (LLM calls)",
    "llm: marks tests that require LLM API",
    "legacy: marks tests for deprecated/removed features (classifier, _retry_loop, execute)",
]
pythonpath = ["src"]
